--- a/views/mysore_aggr.ejs
+++ b/views/mysore_aggr.ejs
@@ -152,7 +152,7 @@
             </tbody>
           </table>
           <% } else { %>
-            <p>No tourist spots found in cities with an rating > <%= minRating || 3.5 %>.</p>
+            <p>No Restaurants found in cities with an rating > <%= minRating  %>.</p>
             <% } %>
 
 
@@ -244,7 +244,7 @@
                         </tbody>
                       </table>
                       <% } else { %>
-                        <p>No data available for total entry fee in each district.</p>
+                        <p>No data available for total entry fee in given pincode.</p>
                         <% } %>
 
 
